Terminé de hacer el ejercicio a entregar de la clase 06

--- a/Ejercicios de clases/clase_06.ipynb
+++ b/Ejercicios de clases/clase_06.ipynb
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -689,15 +689,15 @@
      "text": [
       "1 + 2.1 x + 3 x^2 + 1.0 x^3\n",
       "2.1 + 6 x + 3.0 x^2\n",
-      "1 + 0 x + -3 x^2 + -8 x^3\n",
-      "0 + -6 x + -24 x^2\n",
-      "-6 + -48 x\n"
+      "1 + 0 x + -3 x^2 + (-3)*x^2 + -8 x^3 + (-8)*x^3\n",
+      "0 + -6 x + (-6)*x^1 + -24 x^2 + (-24)*x^2\n",
+      "-6 + (-6)*x^0 + -48 x + (-48)*x^1\n"
      ]
     }
    ],
    "source": [
     "class Polinomio():\n",
-    "  #Antes decía \"Objeto padre\". Se lo saqué porque si no, no corría\n",
+    "  #Antes decía \"Objeto padre\". Se lo saqué porque si no no corría\n",
     "\n",
     "  def __init__(self, coefs=[]):\n",
     "    \"\"\"Crea el objeto. Si los coeficientes son proporcionados lo inicializa\n",
@@ -763,7 +763,7 @@
     "    Keyword Arguments:\n",
     "    Agregar Documentación\n",
     "    \"\"\"\n",
-    "    mult_coefs = self.get_coeficientes()\n",
+    "    mult_coefs = self.coeficientes.copy()\n",
     "    for i in range(len(mult_coefs)):\n",
     "      mult_coefs[i] = mult_coefs[i]*k\n",
     "    poli = Polinomio(mult_coefs)\n",
@@ -780,13 +780,17 @@
     "    >>> P1 = P.derivada()\n",
     "    >>> P2 = P.derivada(n=2)\n",
     "    \"\"\"\n",
-    "    #CONTROLAR SI n es ENTERO Y > 1!!\n",
+    "    #Control:\n",
+    "    if n <= 0:\n",
+    "     raise Exception(f\"n = {n}, debería ser positivo\")\n",
+    "    if int(n)-n != 0:\n",
+    "      raise Exception(f\"n = {n}, debería ser entero\")\n",
     "\n",
     "    if n == 1: #Primera derivada\n",
     "      orden_deriv = self.grado()\n",
     "      pol_deriv_coefs = [0]*orden_deriv\n",
     "      for i in range(orden_deriv):\n",
-    "          pol_deriv_coefs[i] = self.get_coeficientes()[i+1]*(i+1)\n",
+    "          pol_deriv_coefs[i] = self.coeficientes[i+1]*(i+1)\n",
     "      return Polinomio(pol_deriv_coefs)\n",
     "    else:\n",
     "      return self.derivada(n-1).derivada()\n",
@@ -803,12 +807,29 @@
     "    >>> P = Polinomio([0.1,2,3,0,1)\n",
     "    >>> P1 = P.integrada()\n",
     "    >>> P2 = P.integrada(cte=1.2, n=2)\n",
+    "\n",
+    "    Nota: para n>1 se usa la misma cte de integración en todas las integrales\n",
     "    \"\"\"\n",
-    "    # if n == 1:\n",
-    "    #   return \n",
-    "    # else:\n",
-    "    #   return self.integrada()\n",
-    "    pass\n",
+    "\n",
+    "    #Control:\n",
+    "    if n <= 0:\n",
+    "     raise Exception(f\"n = {n}, debería ser positivo\")\n",
+    "    if int(n)-n != 0:\n",
+    "      raise Exception(f\"n = {n}, debería ser entero\")\n",
+    "\n",
+    "    if n == 1:\n",
+    "      orden_int = self.grado()\n",
+    "      pol_int_coefs = [0]*(orden_int+2)\n",
+    "      for i in range(orden_int+1):\n",
+    "          pol_int_coefs[i+1] = self.coeficientes[i]/(i+1)\n",
+    "      #Cte de integración\n",
+    "      pol_int_coefs[0] = cte\n",
+    "\n",
+    "      return Polinomio(pol_int_coefs)\n",
+    "    else:\n",
+    "      # p = \n",
+    "      # print(p, type(p))\n",
+    "      return self.integrada(cte, n-1).integrada(cte)\n",
     "\n",
     "\n",
     "  def __str__(self):\n",
@@ -828,59 +849,23 @@
     "        poli_str.append(f\"({coef})*x^{i}\")\n",
     "    return \" + \".join(poli_str)\n",
     "\n",
-    "  # @classmethod\n",
-    "  # def termino_to_pol(termino, var='x'):\n",
-    "  #   #Hago un split por el caracter var\n",
-    "  #   s_2split = termino.split(var)\n",
-    "  #   #El elemento 0 estaba a la izquierda de var y por lo tanto es un coeficiente\n",
-    "  #   coef = float(s_2split[0])\n",
-    "  #   #Para la potencia ocurren varios casos\n",
-    "  #   if len(s_2split) == 1:\n",
-    "  #     #Para x^0, la lista tiene un único elemento\n",
-    "  #     potencia = 0\n",
-    "  #   else:\n",
-    "  #     if(s_2split[1] == \"\" or s_2split[1] == \" \"):\n",
-    "  #     #Para x^1, la lista tiene \"\" o \" \" como segundo elemento\n",
-    "  #       potencia = 1\n",
-    "  #     #Para x^n con n>1, la lista tiene como segundo elemento \"^n\"\n",
-    "  #     else:\n",
-    "  #       potencia = float(s_2split[1].split(\"^\")[1])\n",
-    "  #       #Nuevamente hago un split\n",
-    "  #   #Creo el polinomio\n",
-    "  #   coeficientes = [0]*(potencia+1)\n",
-    "  #   coeficientes[potencia] = coef\n",
-    "  #   return Polinomio(coeficientes)\n",
-    "\n",
-    "\n",
-    "  # def from_string(self, s, var='x'):\n",
-    "  #   \"\"\"\n",
-    "  #   Keyword Arguments:\n",
-    "  #   s   -- Representación del polinomio como string\n",
-    "  #   var -- (default 'x') Variable del polinomio: P(var)\n",
-    "\n",
-    "  #   Modo de uso:\n",
-    "  #   >>> P = Polinomio()\n",
-    "  #   >>> P.from_string('x + 2 x^2 + 3x + 1 + x^4', var='x')\n",
-    "\n",
-    "  #   No devuelve nada.\n",
-    "  #   Nota: Si una potencia aparece más de una vez, sus coeficientes se suman\n",
-    "  #   \"\"\"\n",
-    "  #   #Inicializo el string\n",
-    "  #   self.set_coeficientes()\n",
-    "  #   #Hago un split del string por el caracter \"+\"\n",
-    "  #   s_split = s.split(\"+\")\n",
-    "  #   #Convierto cada elemento en un polinomio y luego los sumo\n",
-    "  #   poli_termino = Polinomio()\n",
-    "  #   for termino in s_split:\n",
-    "  #     print(termino)\n",
-    "  #     poli_termino = Polinomio.termino_to_pol(termino, var)\n",
-    "  #     self.suma_pol(poli_termino)\n",
-    "  #   return None\n",
-    "\n",
     "  def from_string(self, s, var='x'):\n",
+    "    \"\"\"\n",
+    "    Keyword Arguments:\n",
+    "    s   -- Representación del polinomio como string\n",
+    "    var -- (default 'x') Variable del polinomio: P(var)\n",
+    "\n",
+    "    Modo de uso:\n",
+    "    >>> P = Polinomio()\n",
+    "    >>> P.from_string('x + 2 x^2 + 3x + 1 + x^4', var='x')\n",
+    "\n",
+    "    No devuelve nada.\n",
+    "    Nota: Si una potencia aparece más de una vez, sus coeficientes se suman\n",
+    "    \"\"\"\n",
+    "\n",
     "    #Tenemos que identificar los términos en el string dado. Esto puede no ser sencillo dado que varios términos se pueden escribir de forma distinta. Por ej: x = 1 x = 1 x^1 = + x. Entonces, \"normalicemos\" el string y llevemos cada término a una expresión estándar\n",
     "\n",
-    "\n",
+    "    #Se podrían usar expresiones regulares\n",
     "\n",
     "    #Eliminamos todos los espacios en blanco y los símbolos ^ porque ya sabemos que están acompañados siempre por var\n",
     "    new_string = \"\"\n",
@@ -939,37 +924,40 @@
     "\n",
     "    return None\n",
     "\n",
-    "  # def from_string(self, s, var='x'):\n",
-    "  #   \"\"\"\n",
-    "  #   Keyword Arguments:\n",
-    "  #   s   -- Representación del polinomio como string\n",
-    "  #   var -- (default 'x') Variable del polinomio: P(var)\n",
-    "\n",
-    "  #   Modo de uso:\n",
-    "  #   >>> P = Polinomio()\n",
-    "  #   >>> P.from_string('x + 2 x^2 + 3x + 1 + x^4', var='x')\n",
-    "\n",
-    "  #   No devuelve nada.\n",
-    "  #   Nota: Si una potencia aparece más de una vez, sus coeficientes se suman\n",
-    "\n",
-    "  #   Nota: se podrían usar expresiones regulares!\n",
-    "  #   \"\"\"\n",
-    "  #   item_accion = {var: \"El valor anterior es un coeficiente\"}\n",
-    "\n",
-    "\n",
-    "\n",
-    "  #   return None\n",
-    "\n",
     "  def __call__(self, x):\n",
     "    \"\"\"Evalúa el polinomio en el valor `x` y devuelve el resultado\n",
     "    permite simplemente llamar p(x) para evaluar el polinomio\n",
     "    Keyword Arguments:\n",
-    "    Agregar Documentación\n",
+    "    x -- valor en el que se evalúa el polinomio\n",
     "    \"\"\"\n",
     "    suma = 0\n",
     "    for i in range(self.grado() + 1):\n",
     "        suma+=self.get_coeficientes()[i]*x**i\n",
     "    return suma\n",
+    "\n",
+    "  def __add__(self, p):\n",
+    "    \"\"\"\n",
+    "    Evalúa la suma de polinomios self + p y devuelve el resultado como un polinomio\n",
+    "    Keyword Arguments:\n",
+    "    p -- polinomio a sumar\n",
+    "    \"\"\"\n",
+    "    return self.suma_pol(p)\n",
+    "\n",
+    "  def __mul__(self,value):\n",
+    "    \"\"\"\n",
+    "    Evalúa la multiplicación de un polinomio por un escalar y devuelve el resultado como un polinomio\n",
+    "    Keyword Arguments:\n",
+    "    value -- escalar a multiplicar\n",
+    "    \"\"\"\n",
+    "    return self.mul(value)\n",
+    "  \n",
+    "  def __rmul__(self,value):\n",
+    "    \"\"\"\n",
+    "    Evalúa la multiplicación (a derecha) de un escalar por un polinomio y devuelve el resultado como un polinomio\n",
+    "    Keyword Arguments:\n",
+    "    value -- escalar a multiplicar\n",
+    "    \"\"\"\n",
+    "    return self.mul(value)\n",
     "\n",
     "# if __name__ == '__main__':\n",
     "\n",
@@ -1199,6 +1187,564 @@
     "lista.append(\"1\")\n",
     "lista.append(\"2\")\n",
     "\"+\".join(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1.0, 1.0, 1.0, 1.0]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Polinomio([1,2,3,4])\n",
+    "p2 = p.derivada(n = 2)\n",
+    "p1 = p.integrada()\n",
+    "p1.get_coeficientes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 1.0, 1.0, 1.0, 1.0]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p2 = p.integrada(cte = 2)\n",
+    "p2.get_coeficientes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "1.5 + 1.5 x + 0.75 x^2 + 0.16666666666666666 x^3 + 0.08333333333333333 x^4 + 0.05 x^5 + 0.03333333333333333 x^6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1.5,\n",
+       " 1.5,\n",
+       " 0.75,\n",
+       " 0.16666666666666666,\n",
+       " 0.08333333333333333,\n",
+       " 0.05,\n",
+       " 0.03333333333333333]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "p = Polinomio([1,2,3,4])\n",
+    "print(p.get_coeficientes())\n",
+    "p3 = p.integrada(n = 3, cte = 1.5)\n",
+    "print(p3)\n",
+    "p3.get_coeficientes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Polinomio.integrada of <__main__.Polinomio object at 0x000001772D807790>>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3.0, -3.0, 1, 3.0, 0, 1]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Polinomio()\n",
+    "p.from_string('x^5 + 3x^3 - 2 x+x^2 + 3 - x')\n",
+    "p.get_coeficientes()\n",
+    "#[3, -3, 1, 3, 0, 1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3.0, -2.0, 1, 3.0, 0, 1]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1 = Polinomio()\n",
+    "p1.from_string('y^5 + 3y^3 - 2 y + y^2+3', var='y')\n",
+    "p1.get_coeficientes()\n",
+    "#[3, -2, 1, 3, 0, 1]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verificación de la implementación\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Polinomio([1,2,3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Polinomio([1,2,3,4])\n",
+    "p.grado()\n",
+    "#3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.get_coeficientes()\n",
+    "#[1, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1 = Polinomio()\n",
+    "p1.get_coeficientes()\n",
+    "#[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1.set_coeficientes([1, 2, 3, 4])\n",
+    "p1.get_coeficientes()\n",
+    "#[1, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 6, 12]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1 = p.derivada()\n",
+    "p1.get_coeficientes()\n",
+    "#[2, 6, 12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 24]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p2 = p.derivada(n=2)\n",
+    "p2.get_coeficientes()\n",
+    "#[6, 24]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1.0, 1.0, 1.0, 1.0]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1 = p.integrada()\n",
+    "p1.get_coeficientes()\n",
+    "#[0, 1, 1, 1, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 1.0, 1.0, 1.0, 1.0]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p2 = p.integrada(cte=2)\n",
+    "p2.get_coeficientes()\n",
+    "#[2, 1, 1, 1, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.5,\n",
+       " 1.5,\n",
+       " 0.75,\n",
+       " 0.16666666666666666,\n",
+       " 0.08333333333333333,\n",
+       " 0.05,\n",
+       " 0.03333333333333333]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p3 = p.integrada(n=3, cte=1.5)\n",
+    "p3.get_coeficientes()\n",
+    "#[1.5, 1.5, 0.75, 0.16666666666666666, 0.08333333333333333, 0.05]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3.0, -3.0, 1, 3.0, 0, 1]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Polinomio()\n",
+    "p.from_string('x^5 + 3x^3 - 2 x+x^2 + 3 - x')\n",
+    "p.get_coeficientes()\n",
+    "#[3, -3, 1, 3, 0, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3.0, -2.0, 1, 3.0, 0, 1]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1 = Polinomio()\n",
+    "p1.from_string('y^5 + 3y^3 - 2 y + y^2+3', var='y')\n",
+    "p1.get_coeficientes()\n",
+    "#[3, -2, 1, 3, 0, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 + 2.1 x + 3 x^2 + 4 x^3\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = Polinomio([1,2.1,3,4])\n",
+    "print(p)\n",
+    "#4 x^3 + 3 x^2 + 2.1 x + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Polinomio([1,2,3,4])\n",
+    "p(x=2)\n",
+    "#49"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.25"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p(0.5)\n",
+    "#3.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 4 x + 6 x^2 + 8 x^3\n"
+     ]
+    }
+   ],
+   "source": [
+    "p1 = Polinomio([1,2,3,4])\n",
+    "p2 = Polinomio([1,2,3,4])\n",
+    "p1 + p2\n",
+    "print(p1+p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Polinomio at 0x1772d738610>"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1 = Polinomio([1,2,3,4])\n",
+    "k = 3.5\n",
+    "p1 * k\n",
+    "k * p1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5 + 7.0 x + 10.5 x^2 + 14.0 x^3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 4 x + 6 x^2 + 8 x^3\n",
+      "1 + 2 x + 3 x^2 + 4 x^3\n"
+     ]
+    }
+   ],
+   "source": [
+    "p1 = Polinomio([1,2,3,4])\n",
+    "p1.mul(2)\n",
+    "print(2*p1)\n",
+    "print(p1)"
    ]
   },
   {
