Fui a la clase 09

--- a/Ejercicios de clases/clase_08.ipynb
+++ b/Ejercicios de clases/clase_08.ipynb
@@ -254,7 +254,7 @@
     "\n",
     "4.   Usando las funciones de numpy `sign` y `maximum` definir las siguientes funciones, que acepten como argumento un array y devuelvan un array con el mismo *shape*:\n",
     "  - función de Heaviside, que vale 1 para valores positivos de su argumento y 0 para valores negativos.\n",
-    "  **Cómo comparo ndarrays?**\n",
+    "  **Cómo comparo ndarrays? Hay una función where de numpy que dice \"where is something, do this\"** \n",
     "  - La función escalón, que vale 0 para valores del argumento fuera del intervalo $(-1,1)$ y 1 para argumentos en el intervalo.\n",
     "  - La función rampa, que vale 0 para valores negativos de $x$ y $x$ para valores positivos.\n",
     "\n",
@@ -371,10 +371,31 @@
     "    # if x == 0:\n",
     "    #     return float('NaN')\n",
     "    # else:    \n",
-    "    return (np.sign(x)/2) + 0.5\n",
+    "    #Hay una función where de numpy que dice \"where is something, do this\"\n",
+    "        return (np.sign(x)/2) + 0.5\n",
     "\n",
     "test = np.array([-2,-1, -0.5, 0, 0.5, 1.,2])\n",
     "Heaviside(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sign(0)"
    ]
   },
   {
